--- a/src/app/pages/school/configuration/academics/rollover/rollover.component.html
+++ b/src/app/pages/school/configuration/academics/rollover/rollover.component.html
@@ -33,7 +33,7 @@
 
     <ng-template #content role="document" let-modal>
         <div class="modal-header p-3 bg-light">
-            <h5 class="modal-title" id="modalLabel">Rollover Academic Year</h5>
+            <h5 class="modal-title" id="modalLabel">Academic Year Rollover</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
         <form  class="tablelist-form" autocomplete="off" [formGroup]="form" (ngSubmit)="onSubmit()">
