--- a/src/app/pages/school/configuration/academics/academic-years/academic-years.component.html
+++ b/src/app/pages/school/configuration/academics/academic-years/academic-years.component.html
@@ -71,6 +71,11 @@
                     <label class="form-label">End Date</label>
                     <input class="form-control flatpickr-input" type="text" mwlFlatpickr [altInput]="true" [convertModelValue]="true" altFormat="F j, Y" dateFormat="Y-m-d"  formControlName="endDate"  placeholder="Select End Date" />
                 </div>
+                <div class="col-lg-12">
+                    <label for="sortOrder" class="form-label">Sort Order <span class="text-danger">*</span></label>
+                    <input type="number" id="sortOrder" class="form-control" placeholder="Enter Sort Order" required formControlName="sortOrder" [ngClass]="{ 'is-invalid': submitted && form['sortOrder'].errors }" />
+                    <div class="invalid-feedback">Please enter sort order</div>
+                </div>
                 </div>
             </div>
             <div class="modal-footer">
