--- a/src/app/pages/school/configuration/academics/academic-years/academic-years.component.html
+++ b/src/app/pages/school/configuration/academics/academic-years/academic-years.component.html
@@ -54,13 +54,9 @@
                     <div class="invalid-feedback">Please enter a name</div>
                 </div>
                 <div class="col-lg-6">
-                    <label class="form-label">Is Active <span class="text-danger">*</span></label>
-                    <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && academicYearForm.controls['isActive'].invalid }">
-                        <option selected [ngValue]="null">Select status</option>
-                        <option [ngValue]="true">Yes</option>
-                        <option [ngValue]="false">No</option>
-                    </select>
-                    <div class="invalid-feedback" *ngIf="submitted && academicYearForm.controls['isActive'].invalid">Please select an option</div>
+                    <label for="sortOrder" class="form-label">Sort Order <span class="text-danger">*</span></label>
+                    <input type="number" id="sortOrder" class="form-control" placeholder="Enter Sort Order" required formControlName="sortOrder" [ngClass]="{ 'is-invalid': submitted && form['sortOrder'].errors }" />
+                    <div class="invalid-feedback">Please enter sort order</div>
                 </div>
                 <div class="col-lg-6">
                    <label class="form-label">Start Date <span class="text-danger">*</span></label>
@@ -72,9 +68,13 @@
                     <input class="form-control flatpickr-input" type="text" mwlFlatpickr [altInput]="true" [convertModelValue]="true" altFormat="F j, Y" dateFormat="Y-m-d"  formControlName="endDate"  placeholder="Select End Date" />
                 </div>
                 <div class="col-lg-12">
-                    <label for="sortOrder" class="form-label">Sort Order <span class="text-danger">*</span></label>
-                    <input type="number" id="sortOrder" class="form-control" placeholder="Enter Sort Order" required formControlName="sortOrder" [ngClass]="{ 'is-invalid': submitted && form['sortOrder'].errors }" />
-                    <div class="invalid-feedback">Please enter sort order</div>
+                    <label class="form-label">Is Active <span class="text-danger">*</span></label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && academicYearForm.controls['isActive'].invalid }">
+                        <option selected [ngValue]="null">Select status</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback" *ngIf="submitted && academicYearForm.controls['isActive'].invalid">Please select academic year status</div>
                 </div>
                 </div>
             </div>
