Add possibility to delete academic terms

--- a/src/app/pages/school/configuration/academics/academic-terms/academic-terms.component.html
+++ b/src/app/pages/school/configuration/academics/academic-terms/academic-terms.component.html
@@ -14,7 +14,7 @@
                     </div>
                 </div>
             </div>
-            <generic-app-table [headers]="headers" [data]="academicTerms" [showActions]="true"  [showDelete]="false" (editClicked)="editModal(content, $event)"></generic-app-table>
+            <generic-app-table [headers]="headers" [data]="academicTerms" [showActions]="true"  [showDelete]="true" (editClicked)="editModal(content, $event)" (deleteClicked)="deleteAcademicTerm($event)"></generic-app-table>
         </div>
     </div>
 
