--- a/src/app/pages/school/configuration/subjects/subjects.component.html
+++ b/src/app/pages/school/configuration/subjects/subjects.component.html
@@ -22,9 +22,11 @@
                 [headers]="headers" 
                 [data]="subjects" 
                 [showActions]="true"  
-                [showDelete]="false"
+                [showDelete]="true"
                 [customTemplates]="{ 'isActive': statusTemplate }"
-                (editClicked)="editModal(content, $event)">
+                (editClicked)="editModal(content, $event)"
+                (deleteClicked)="deleteSubject($event)"
+                >
             </generic-app-table>
 
             <ng-template #statusTemplate let-status let-row="row">
