--- a/src/app/pages/school/configuration/sections/sections.component.html
+++ b/src/app/pages/school/configuration/sections/sections.component.html
@@ -24,7 +24,14 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <generic-app-table [headers]="headers" [data]="classSections" [showActions]="true" [showDelete]="false" (editClicked)="editModal(content, $event)"></generic-app-table>
+                                    <generic-app-table 
+                                    [headers]="headers" 
+                                    [data]="classSections" 
+                                    [showActions]="true" 
+                                    [showDelete]="true" 
+                                    (editClicked)="editModal(content, $event)" 
+                                    (deleteClicked)="deleteClassSection($event)">
+                                </generic-app-table>
                                 </div>
                             </div>
                         </div>
