--- a/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
+++ b/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
@@ -103,39 +103,23 @@
             <h5 class="modal-title" id="modalLabel">Student Subjects</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
         </div>
-        <div class="col-xxl-12">
-            <ul ngbNav #Justify="ngbNav" [activeId]="1" class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
-                <li [ngbNavItem]="1"><a ngbNavLink><span class="d-sm-block">General</span></a>
-                    <ng-template ngbNavContent>
-                        <form class="tablelist-form" autocomplete="off" [formGroup]="studentSubjectForm">
-                            <div class="modal-body">
-                                <div class="mb-3">
-                                    <label class="form-label">Subjects <span class="text-danger"> *</span></label>
-                                    <ng-select [items]="subjects" bindLabel="name" multiple="true" bindValue="id"
-                                        formControlName="subjectIds" placeholder="Select Subjects"
-                                        [ngClass]="{ 'is-invalid': submitted && fStudentSubjectForm['subjectIds'].invalid }"></ng-select>
-                                    <div class="invalid-feedback">Please select subject(s)</div>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <div class="hstack gap-2 justify-content-end">
-                                    <button (click)="onCreateStudentSubjects()" class="btn btn-primary"><i class="ri-add-line align-bottom me-1"></i> Assign</button>
-                                    <button (click)=" onDeleteStudentSubjects()" class="btn btn-danger"><i class="ri-delete-bin-line align-bottom me-1"></i> Unassign</button>
-                                </div>
-                            </div>
-                        </form>
-                    </ng-template>
-                </li>
-                <li [ngbNavItem]="2"><a ngbNavLink><span class="d-sm-block">Export</span></a>
-                    <ng-template ngbNavContent>
-        
-                    </ng-template>
-                </li>
-            </ul>
-            <div class="tab-content  text-muted">
-                <div [ngbNavOutlet]="Justify"></div>
+        <form class="tablelist-form" autocomplete="off" [formGroup]="studentSubjectForm">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label class="form-label">Subjects <span class="text-danger"> *</span></label>
+                    <ng-select [items]="subjects" bindLabel="name" multiple="true" bindValue="id"
+                        formControlName="subjectIds" placeholder="Select Subjects"
+                        [ngClass]="{ 'is-invalid': submitted && fStudentSubjectForm['subjectIds'].invalid }"></ng-select>
+                    <div class="invalid-feedback">Please select subject(s)</div>
+                </div>
             </div>
-        </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button (click)="onCreateStudentSubjects()" class="btn btn-primary"><i class="ri-user-shared-line align-bottom me-1"></i> Assign</button>
+                    <button (click)="onDeleteStudentSubjects()" class="btn btn-danger"><i class="ri-delete-bin-line align-bottom me-1"></i> Unassign</button>
+                </div>
+            </div>
+        </form>
     </ng-template>
 
     <ng-template #studentInfo role="document" let-modal>
