--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -13,10 +13,10 @@
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
-                            <button type="button" class="btn btn-success" (click)="openModal(importResultsContent)" [disabled]="isActionButtonDisabled()"><i
-                                    class="ri-file-excel-2-line align-bottom me-1"></i> Import</button>
                             <button type="button" class="btn btn-secondary" (click)="openModal(scaleContent)"><i
-                                    class="ri-scales-line align-bottom me-1"></i> Grading Scale</button>
+                                class="ri-scales-line align-bottom me-1"></i> Grading Scale</button>
+                                <button type="button" class="btn btn-success" (click)="openModal(importResultsContent)" [disabled]="isActionButtonDisabled()"><i
+                                        class="ri-file-excel-2-line align-bottom me-1"></i> Import</button>
                             <button type="button" class="btn btn-info" (click)="saveResults()" [disabled]="isActionButtonDisabled()"><i
                                     class="ri-save-2-line align-bottom me-1"></i> Save Results</button>
                             <button type="button" class="btn btn-danger" (click)="deleteResults()" [disabled]="isActionButtonDisabled()"><i
@@ -119,10 +119,10 @@
 
             <div class="modal-footer">
                 <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i
+                            class="ri-close-line align-bottom me-1"></i> Close</button>
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal" disabled="true"><i
                             class="ri-save-2-line align-bottom me-1"></i> Save</button>
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()"><i
-                            class="ri-arrow-go-back-line align-bottom me-1"></i> Cancel</button>
                 </div>
             </div>
         </ng-template>
