--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -18,9 +18,9 @@
                                 <button type="button" class="btn btn-success" (click)="openModal(importResultsContent)" [disabled]="isActionButtonDisabled()"><i
                                         class="ri-file-excel-2-line align-bottom me-1"></i> Import</button>
                             <button type="button" class="btn btn-info" (click)="saveResults()" [disabled]="isActionButtonDisabled()"><i
-                                    class="ri-save-2-line align-bottom me-1"></i> Save Results</button>
+                                    class="ri-save-2-line align-bottom me-1"></i> Save</button>
                             <button type="button" class="btn btn-danger" (click)="deleteResults()" [disabled]="isActionButtonDisabled()"><i
-                                    class="ri-delete-bin-line align-bottom me-1"></i> Delete Results</button>
+                                    class="ri-delete-bin-line align-bottom me-1"></i> Delete</button>
                         </div>
                     </div>
                     <div class="col-xl-12 ">
