--- a/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
+++ b/src/app/pages/school/students/student-enrollments/student-enrollments.component.html
@@ -131,7 +131,7 @@
                 <div class="modal-body">
                     <div class="row g-3">
                         <div class="col-lg-9">
-                            <ng-select [ngModelOptions]="{standalone: true}" [items]="subjects" bindLabel="name" multiple="true" [(ngModel)]="selectedStudentSelectedSubjects" bindValue="id" placeholder="Select Subjects to assign"></ng-select>
+                            <ng-select [ngModelOptions]="{standalone: true}" [items]="subjects" bindLabel="name" multiple="true" [(ngModel)]="selectedStudentSelectedSubjects" bindValue="id" placeholder="Select Subjects"></ng-select>
                         </div>
                         <div class="col-lg-3">
                                 <button [disabled]="selectedStudentSelectedSubjects.length < 1" (click)="onSelectedStudentSaveClick()" class="btn btn-primary w-100"><i class=" ri-save-2-line align-bottom me-1"></i> Save</button>
